<resources>


    <string name="app_name">CaseHub</string>
    <string name="title_button_skip">Пропустить</string>
    <string name="authorization_title_text">С возвращением!</string>
    <string name="authorization_description_text">войдите, чтобы получить доступ к \nучётной записи</string>
    <string name="hint_editText_email">Введите почту</string>
    <string name="hint_editText_password">Введите пароль</string>
    <string name="hint_editText_password_again">Повторите пароль</string>
    <string name="forgot_password_text">Забыли пароль ?</string>
    <string name="button_text_auth">Войти</string>
    <string name="button_text_reg">Зарегистрироваться</string>
    <string name="reg_link_text">Зарегестрируйтесь</string>
    <string name="auth_link_text">Войти</string>
    <string name="description_reg_link">Нет аккаунта ?</string>
    <string name="description_auth_link">Уже есть аккаунт ?</string>
    <string name="registration_title_text">Зарегистрируйтесь</string>
    <string name="registration_description_text">и присоединитесь к сообществу CaseHub</string>
    <string name="hint_editText_fio">Введите ФИО</string>


    <!-- Навигация -->
    <string name="main_title">Главная</string>
    <string name="workshop_title">Мастерская</string>
    <string name="profile_title">Профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="number_quater_one">1/3</string>
    <string name="number_quater_two">2/3</string>
    <string name="number_quater_three">3/3</string>
    <string name="title_input_line_text">Название</string>
    <string name="description_input_line_text">Короткое описание</string>
    <string name="select_case_complexity_text">Выберите сложность</string>
    <string name="complexity_text_level_hard">Сложный</string>
    <string name="complexity_text_level_medium">Нормальный</string>
    <string name="complexity_text_level_easy">Лёгкий</string>
    <string name="select_case_platform_text">Выберите платформу</string>
    <string name="desktop_platform_title">Десктоп</string>
    <string name="web_platform_title">Веб</string>
    <string name="ai_platform_text">Искусственный интеллект</string>
    <string name="mobile_platform_text">Мобилка</string>
    <string name="chatbot_platform_text">Чат-бот</string>
    <string name="gameDev_platform_text">Игровая разработка</string>
    <string name="button_text_next">Далее</string>
    <string name="attach_analytics_text">Прикрепите аналитику</string>
    <string name="attach_design_text">Прикрепите дизайн</string>
    <string name="attach_decision_text">Прикрепите решение</string>
    <string name="hash_tag_dop_text">Дополнительные хэш-теги</string>
    <string name="text_logo_icon_tipped">Загрузите логотип компании</string>
    <string name="text_case_author">Укажите компанию кейсо-держателя</string>
    <string name="text_link_to_company">Укажите ссылку на компанию</string>
    <string name="text_case_res_link">Укажите ресурс, откуда взят кейс</string>
    <string name="text_export_case">Загрузите кейс</string>
    <string name="button_text_complete">Завершить</string>
    <string name="searchbar_hint">Поиск по кейсам...\n</string>
    <string name="text_case_empty">Список кейсов пуст</string>
    <string name="text_case_empty_caveat">Похоже вы еще не создали ни одного\n \tкейса. Самое время это исправить!</string>
    <string name="searcher_case_hub">Поиск по кейсам…</string>
    <string name="text_content_plus">＋</string>
    <string name="text_favorite_case_empty_caveat">Похоже вы еще не добавили ни одного\n \tкейса. Самое время это исправить!</string>
    <string name="text_favorite_case_empty">Избранное пусто</string>





                <!-- Временные тексты -->
    <string name="test_text_to_profile_layout">ПРОФИЛЬ</string>
    <string name="text_content_description_logo">Нажмите чтобы загрузить логотип компании</string>
    <string name="text_content_description_logo_two">Нажмите чтобы загрузить кейс компании</string>
    <string name="test_tag_description">Например, капибара</string>
    <string name="content_description_icon_analytic">Картинка аналитика</string>
    <string name="content_description_icon_design">Картинка дизайна</string>
    <string name="content_description_icon_programming">Картинка программирование</string>
    <string name="text_notepad_expla">Картинка Ноутбук</string>
    <string name="text_internet_expla">Сетевая паутина</string>
    <string name="text_ai_expla">ИИ картинка</string>
    <string name="text_telephone_expla">Телефон картинка</string>
    <string name="text_robot_expla">Робот картинка</string>
    <string name="text_gameDex_expla">Гейм дев картинка</string>
    <string name="text_insane_expla">Эмодзи безумный</string>
    <string name="text_normal_expla">Удовлетворенный эмодзи</string>
    <string name="text_easy_expla">Бутылочка картинка</string>
    <string name="network_error_title_text">Скоро вернёмся в мир кейсов!</string>
    <string name="network_error_description_text">Упс, Соединение потеряно.</string>



</resources>