<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_auth_skip"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/none_dp"
        android:text="@string/title_button_skip"
        android:textSize="@dimen/text_size_medium_18sp"
        android:background="@android:color/transparent"
        android:textColor="@color/dark_slate_gray"
        android:clickable="true"
        android:focusable="true"
        app:drawableEndCompat="@drawable/skip_arrow"
        android:layout_marginTop="@dimen/layout_large_margin_80dp"
        android:layout_marginEnd="@dimen/layout_margin_small_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">
    </Button>

    <TextView
        android:id="@+id/auth_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_title_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large_32sp"
        android:paddingTop="@dimen/padding_large_160dp"
        android:paddingStart="@dimen/padding_medium_28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_auth_skip"
        tools:ignore="RtlSymmetry">
    </TextView>

    <TextView
        android:id="@+id/auth_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authorization_description_text"
        android:textColor="@color/dark_slate_gray"
        android:textSize="@dimen/text_size_16sp"
        android:paddingStart="@dimen/padding_medium_28dp"
        app:layout_constraintTop_toBottomOf="@id/auth_title_text"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry">
    </TextView>


    <EditText
        android:id="@+id/email_input_line"
        android:layout_width="@dimen/medium_width_360dp"
        android:layout_height="@dimen/medium_height_56dp"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_editText_email"
        app:drawableEndCompat="@drawable/email"
        android:layout_marginTop="@dimen/layout_medium_margin_40dp"
        android:layout_marginStart="@dimen/layout_margin_small_8dp"
        android:padding="@dimen/padding_medium_16dp"
        android:maxLength="129"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/special_hint_color"
        style="@style/CustomEditText"
        android:background="@drawable/input_ui_case"
        app:layout_constraintTop_toBottomOf="@id/auth_description_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>

    <EditText
        android:id="@+id/password_input_line"
        android:layout_width="@dimen/medium_width_360dp"
        android:layout_height="@dimen/medium_height_56dp"
        android:autofillHints="password"
        android:hint="@string/hint_editText_password"
        app:drawableEndCompat="@drawable/lock"
        android:layout_marginTop="@dimen/layout_margin_medium_20dp"
        android:layout_marginStart="@dimen/layout_margin_small_8dp"
        android:padding="@dimen/padding_medium_16dp"
        android:maxLength="128"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:textColorHint="@color/special_hint_color"
        android:inputType="textPassword"
        style="@style/CustomEditText"
        android:background="@drawable/input_ui_case"
        app:layout_constraintTop_toBottomOf="@id/email_input_line"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </EditText>


    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/link_special_text"
        android:paddingTop="@dimen/layout_margin_small_12dp"
        app:layout_constraintTop_toBottomOf="@id/password_input_line"
        app:layout_constraintEnd_toEndOf="@id/password_input_line">
    </TextView>


    <Button
        android:id="@+id/auth_button"
        android:layout_width="@dimen/button_medium_width_120dp"
        android:layout_height="@dimen/button_medium_height_48dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text_auth"
        android:textColor="@color/white"
        android:layout_margin="@dimen/layout_margin_small_12dp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_small_8dp"
        app:layout_constraintTop_toBottomOf="@id/auth_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginEnd="@dimen/layout_margin_small_8dp"
            android:text="@string/description_reg_link">
        </TextView>

    <TextView
        android:id="@+id/registration_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_link_text"
        android:textSize="@dimen/text_size_16sp"
        android:textColor="@color/link_special_text"
        android:paddingTop="@dimen/padding_small_4dp">
    </TextView>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>