<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/button_reg_done"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/none_dp"
        android:layout_marginTop="@dimen/layout_large_margin_80dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:paddingEnd="@dimen/padding_medium_20dp"
        android:text="@string/title_button_skip"
        android:textColor="@color/dark_slate_gray"
        android:textSize="@dimen/text_size_medium_18sp"
        app:drawableEndCompat="@drawable/skip_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">
    </Button>

    <TextView
        android:id="@+id/reg_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_medium_28dp"
        android:paddingTop="@dimen/padding_large_160dp"
        android:text="@string/registration_title_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_large_32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reg_done"
        tools:ignore="RtlSymmetry">
    </TextView>

    <TextView
        android:id="@+id/reg_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_medium_28dp"
        android:text="@string/registration_description_text"
        android:textColor="@color/dark_slate_gray"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_title_text"
        tools:ignore="RtlSymmetry">
    </TextView>


    <EditText
        android:id="@+id/reg_fio_input"
        style="@style/CustomEditText"
        android:layout_width="@dimen/medium_width_360dp"
        android:layout_height="@dimen/medium_height_56dp"
        android:layout_marginStart="@dimen/layout_margin_small_8dp"
        android:layout_marginTop="@dimen/padding_medium_20dp"
        android:autofillHints="name"
        android:background="@drawable/input_ui_case"
        android:ellipsize="end"
        android:hint="@string/hint_editText_fio"
        android:inputType="textPersonName"
        android:maxLength="21"
        android:padding="@dimen/padding_medium_16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        app:drawableEndCompat="@drawable/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_description_text">
    </EditText>

    <EditText
        android:id="@+id/reg_email_input"
        style="@style/CustomEditText"
        android:layout_width="@dimen/medium_width_360dp"
        android:layout_height="@dimen/medium_height_56dp"
        android:layout_marginStart="@dimen/layout_margin_small_8dp"
        android:layout_marginTop="@dimen/padding_medium_20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_ui_case"
        android:ellipsize="end"
        android:hint="@string/hint_editText_email"
        android:inputType="textEmailAddress"
        android:maxLength="129"
        android:padding="@dimen/padding_medium_16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        app:drawableEndCompat="@drawable/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_fio_input">
    </EditText>

    <EditText
        android:id="@+id/reg_password_input"
        style="@style/CustomEditText"
        android:layout_width="@dimen/medium_width_360dp"
        android:layout_height="@dimen/medium_height_56dp"
        android:layout_marginStart="@dimen/layout_margin_small_8dp"
        android:layout_marginTop="@dimen/padding_medium_20dp"
        android:autofillHints="password"
        android:background="@drawable/input_ui_case"
        android:ellipsize="end"
        android:hint="@string/hint_editText_password"
        android:inputType="textPassword"
        android:maxLength="129"
        android:padding="@dimen/padding_medium_16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        app:drawableEndCompat="@drawable/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_email_input">
    </EditText>

    <EditText
        android:id="@+id/reg_password_input_again"
        style="@style/CustomEditText"
        android:layout_width="@dimen/medium_width_360dp"
        android:layout_height="@dimen/medium_height_56dp"
        android:layout_marginStart="@dimen/layout_margin_small_8dp"
        android:layout_marginTop="@dimen/padding_medium_20dp"
        android:autofillHints="password"
        android:background="@drawable/input_ui_case"
        android:ellipsize="end"
        android:hint="@string/hint_editText_password_again"
        android:inputType="textPassword"
        android:maxLength="129"
        android:padding="@dimen/padding_medium_16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColorHint="@color/special_hint_color"
        app:drawableEndCompat="@drawable/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password_input">
    </EditText>


    <Button
        android:id="@+id/auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_small_12dp"
        android:background="@drawable/rounded_button"
        android:text="@string/button_text_reg"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reg_password_input_again">
    </Button>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_margin_small_8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_button">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_16sp"
            android:layout_marginEnd="@dimen/layout_margin_small_8dp"
            android:text="@string/description_auth_link">
        </TextView>

        <TextView
            android:id="@+id/registration_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding_small_8dp"
            android:textColorHint="@color/link_special_text"
            android:text="@string/auth_link_text"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_medium_18sp">
        </TextView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
